# fastapi-dapr

./: .gitignore  Dockerfile  README.md  dapr.yaml  docker-compose.yaml  main.py  makefile  pyproject.toml  skaffold.yaml
api-srv/: Dockerfile  main.py
api-srv/actors/: interface.py
apps/delivery_service/app/: main.py  routes.py
apps/order-processor/: app.py
apps/order_service/: Dockerfile  main.py
apps/order_service/app/: main.py  routes.py
apps/payment_service/: Dockerfile  main.py
apps/payment_service/app/: main.py  routes.py
apps/payment_service/proto/: order_pb2.py  order_pb2_grpc.py
apps/subscriber_service/: Dockerfile
apps/subscriber_service/app/: main.py
apps/workflow_service/: Dockerfile  main.py
apps/workflow_service/app/: main.py  routes.py  workflow.py
apps/workflow_service/flows/: order_flow.py
checkout-srv/: Dockerfile  main.py
components/: pubsub.yaml  state_redis.yaml  statestore.yaml
deploy/api-srv/: deployment.yaml
deploy/checkout-srv/: deployment.yaml
deploy/infra/dapr/components/: broker.yaml  uppercase.yaml
deploy/infra/dapr/configurations/: pipeline.yaml
deployment/k8s/: k8s-server.yaml
deployment/python-app/: deployment.yaml
deployment/test-app/: deployment.yaml
k8s/: ing.yaml  order-deploy.yaml  payment-deploy.yaml  subscriber-deploy.yaml  workflow-deploy.yaml
proto/: build.sh  order.proto
scripts/: run_local.sh
